<resources>
    <string name="app_name">Addons</string>
    <string name="game_version">1.16.20.5 +</string>
    <string name="review_input_warning">Write a message to send</string>
    <string name="review_exist_warning">Please no spamming messages</string>
    <string name="review_add_info">Message added!</string>
    <string name="hide_review_message">Messages removed by admin.</string>
    <string name="hide_user_message">User Removed</string>
    <string name="hide_review_date">Removed</string>
    <string name="title_activity_login">Login</string>
    <string name="title_dialog_forgot_password">Forgot Password</string>
    <string name="hint_input_forgot">Registered Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_bt_login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="login_email_warning">Enter your email</string>
    <string name="login_email_invalid">Invalid email</string>
    <string name="login_password_warning">Enter your password</string>
    <string name="login_success_info">Login Successful</string>
    <string name="account_disabled">Account has been banned</string>
    <string name="invalid_email_password">Invalid email or password</string>
    <string name="email_not_registered">Email not registered</string>
    <string name="email_sent_info">Email has been sent!</string>
    <string name="create_account_activity">Create an account</string>
    <string name="create_account_button">Create Account</string>
    <string name="title_activity_profile">Account</string>
    <string name="profile_name_empty">Enter a username</string>
    <string name="profile_email_empty">Enter an email</string>
    <string name="profile_email_invalid">Invalid email</string>
    <string name="profile_password_empty">Enter a password</string>
    <string name="profile_password_invalid">Password alphanumeric only</string>
    <string name="register_success">Registered successfully!</string>
    <string name="email_in_use">Email already in use</string>
    <string name="account_not_found">Account not found or banned</string>
    <string name="form_action_update">UPDATE</string>
    <string name="form_action_create_account">JOIN</string>
    <string name="form_title_update">Update your account</string>
    <string name="form_title_create_account">Create a free account</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="register_term_note">By creating an account, you agree with Octarus policies</string>
    <string name="close_sidebar">Click transparent space to close the sidebar</string>
    <string name="logout_title">Logout</string>
    <string name="login_title">Login</string>
    <string name="title_menu_home">Bedrock Addons</string>
    <string name="title_menu_topic">Categories</string>
    <string name="title_menu_notif">Notifications</string>
    <string name="title_menu_saved">Bookmarks</string>
    <string name="title_menu_more">Help</string>
    <string name="title_menu_discord">Join Discord</string>
    <string name="logout_confirmation_text">Are you sure you want to logout?</string>
    <string name="update_message">Update</string>
    <string name="content_type_other">Other</string>
    <string name="content_type_mcworld">McWorld</string>
    <string name="content_type_mcpack">McPack</string>
    <string name="update_info">You are using Version 21, The Simplicity Update. This update makes major changes to infrastructure which will be useful to those utilizing the Addons API, among other improvements.</string>
    <string name="remove_from_saved">Creation removed from bookmarks</string>
    <string name="added_to_saved">Creation added to bookmarks</string>
    <string name="title_menu_refresh">Refresh</string>
    <string name="title_dialog_text_size">Text Size</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="notification_channel_server">Default</string>
    <string name="msg_notif_empty">No new notifications</string>
    <string name="type_news">New Content</string>
    <string name="type_topic">Category</string>
    <string name="type_link">Link</string>
    <string name="type_image">Image</string>
    <string name="type_normal">General</string>
    <string name="title_activity_search">Search</string>
    <string name="hint_topic">feed:\u0020</string>
    <string name="hint_default">search</string>
    <string name="please_fill">Type something and hit enter</string>
    <string name="all_topic">All Categories</string>
    <string name="title_activity_search_filter">Search Filter</string>
    <string name="hint_search_topic">Search</string>
    <string name="title_filter_topic">Categories</string>
    <string name="title_filter_sort">Sort By</string>
    <string name="title_filter_see_all">ADVANCED</string>
    <string name="sort_default">Newest Uploads</string>
    <string name="sort_time_asc">Oldest Uploads</string>
    <string name="sort_view_desc">Most Downloads</string>
    <string name="sort_view_asc">Least Downloads</string>
    <string-array name="about_title_array">
        <item>Welcome to \nAddons for Minecraft</item>
        <item>Filter search \nquickly and easily</item>
    </string-array>
    <string-array name="about_description_array">
        <item>The best way to find addons\nand maps for Minecraft</item>
        <item>Search latest and greatest creations\nfrom all around the world</item>
    </string-array>
    <string name="share_text">
        Check out \'%1$s\'%n
        Using \'%2$s\' by Octarus%n
        http://play.google.com/store/apps/details?id=com.download.mcpeaddons
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_version">Version</string>
    <string name="developer_email">contact11pmlabs@gmail.com</string>
    <string name="pref_title_contact_us">Contact</string>
    <string name="copyright">Bedrock Addons © 2024 11pm Labs. All right reserved</string>
    <string name="license">This project code is licensed under the MIT license</string>
    <string name="community">CTZN is an alpha product, please be kind</string>
    <string name="setting_group_profile">My Account</string>
    <string name="setting_group_notif">Notifications</string>
    <string name="setting_group_display">Display</string>
    <string name="setting_group_others">Extras</string>
    <string name="setting_subtitle_name">Username</string>
    <string name="setting_subtitle_email">Email</string>
    <string name="setting_title_notif">Push Notifications</string>
    <string name="setting_title_ringtone">Notification Sound</string>
    <string name="setting_title_vibrate">Vibrate</string>
    <string name="setting_title_theme">Theme</string>
    <string name="setting_title_enable_cache">Enable Caching</string>
    <string name="setting_title_cache">Clear Cache</string>
    <string name="setting_title_copyright">Copyright</string>
    <string name="setting_title_contact_us">Contact</string>
    <string name="setting_title_build">Version</string>
    <string name="setting_title_term">Privacy Policy</string>
    <string name="setting_title_policies">Policies</string>
    <string name="setting_title_rate">Rate Addons</string>
    <string name="setting_title_more_apps">Help</string>
    <string name="setting_title_intro">Introduction</string>
    <string name="version_unknown">Unknown</string>
    <string name="email_copied">Email Copied to Clipboard</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="message_clear_image_cache">Are you sure want to clear the cache?</string>
    <string name="message_after_clear_image_cache">Successfully cleared the cache</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ringtone_default">Default</string>
    <string-array name="themes">
        <item>Light Mode</item>
        <item>Dark Mode</item>
        <item>Auto</item>
    </string-array>
    <string name="url_copied">URL copied to clipboard</string>
    <string name="FEATURED">Featured</string>
    <string name="MORE">MORE</string>
    <string name="SEE_ALL">See All</string>
    <string name="ADVANCED">ADVANCED</string>
    <string name="OK">OK</string>
    <string name="DEFAULT">DEFAULT</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="APPLY">Apply</string>
    <string name="RESET">Reset</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="DELETE">DELETE</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="NEXT">NEXT</string>
    <string name="SKIP">CONTINUE</string>
    <string name="SEND">SEND</string>
    <string name="just_now">Just now</string>
    <string name="a_minute_ago">A minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="confirmation">Confirmation</string>
    <string name="failed_text">Something went wrong</string>
    <string name="failed_when_load">Failed to connect to Octarus</string>
    <string name="no_internet_text">You are offline</string>
    <string name="msg_data_loaded">Data loaded</string>
    <string name="title_delete_confirm">Delete Confirmation</string>
    <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="msg_copied_clipboard">Text copied to clipboard</string>
    <string name="failed">Failed</string>
    <string name="no_item">Nothing saved</string>
    <string name="no_results">Nothing Found</string>
    <string name="no_notifications">Nothing New</string>
    <string name="msg_app_out_date">A new update has been released</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="publisher_id">pub-0000000000000000</string>
    <string name="privacy_policy_url">http://octarus.com/privacy</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="messagebox_hint">Review (Required)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>
    <string name="notifications">Notifications</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="faq1">How does this app work?</string>
    <string name="answer1">This app allows you to download game content in a safe, quick, and enjoyable way. On the main feed, click on some content that you would like to download, then press the download button. Easy.</string>
    <string name="faq2">How do I download addons?</string>
    <string name="answer2">Please refer to the video or text tutorials for help.</string>
</resources>