<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="200dp">

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xxlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorTextAction" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <ImageView
                android:layout_width="114dp"
                android:layout_height="55dp"
                android:src="@drawable/logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xxlarge" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey_40"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round"
                    android:hint="@string/hint_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/grey_40"
                    android:paddingEnd="@dimen/spacing_xmlarge"
                    android:paddingRight="@dimen/spacing_xmlarge"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/show_pass"
                    android:layout_width="@dimen/spacing_xmlarge"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/toggle_password_view"
                    android:tint="@color/grey_40" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button.Accent.Borderless"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/button_green"
                    android:text="@string/text_bt_login"
                    android:textStyle="bold"
                    android:textColor="@color/colorBackground" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />

            </RelativeLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="@dimen/spacing_medium"
                android:text="@string/forgot_password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorTextAction" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_60"
                    android:textSize="17dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/button_green"
                    android:clickable="true"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:text="Register"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>