<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lyt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_dialog_forgot_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_60"
                    app:fontFamily="sans-serif-medium" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="@dimen/spacing_xlarge"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="?attr/selectableItemBackground"
                    android:tint="@color/grey_60"
                    app:srcCompat="@drawable/ic_close" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_input_forgot"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="Unable to connect to Wenjian"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <Button
                android:id="@+id/bt_submit"
                style="@style/Button.Accent.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bookmarks_button"
                android:text="@string/SEND"
                android:textColor="@color/colorBackground" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
